# plan

./: .gitignore  README.en.md  README.md  app.py  load_faq_data.py  pyproject.toml  requirements.txt.bak
app/agents/: first_graph.py  multi_agent.py  plan_execute.py  view_db.py
app/core/: config.py
app/rag/: vector_store.py
data/: test_questions.json
playground/: 01_pydantic_models.py  02_decorators.py  03_async_requests.py  04_fastapi_excel.py  decorators.py  fastapi_excel.py  pydantic_models.py
scripts/: create_sample_excel.py  evaluate_rag.py  generate_faq.py
tests/: test_retrieve.py
