[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-agent"
version = "0.1.0"
description = "AI Agent for Excel import with multi-worker collaboration"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings>=2.10.1",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
    "openpyxl==3.1.5",
    "tenacity>=8.2.3,<9.0.0,!=8.4.0",
    "langgraph==1.2.6",
    "langgraph-checkpoint-sqlite==3.1.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=1.0.0",
    "chromadb==1.5.9",
    "pandas>=2.3.3,<3.0.0",
    "ragas==0.4.3",
    "datasets>=2.14.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]